Ignore Arduino IDE using wildcards
Avoids having to update the version number in the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,8 @@
 *.out
 *.app
 
-arduino-1.8.13
+## ----------------------------------------------------
+## NSGadget_Teensy
+
+# Arduino IDE
+arduino-*.*.*
